update iimages and copy

--- a/questions-to-ask-when-hiring-a-tax-accountant.html
+++ b/questions-to-ask-when-hiring-a-tax-accountant.html
@@ -61,10 +61,11 @@
               Questions to ask when Hiring a Tax Accountant in 2024
             </h1>
             <p class="blog-summary">
-              Imagine your art and your creativity reaching corners of the world
-              you've never dreamed of. It's not just a canvas or a screen or a
-              photograph or clothing - it's a gateway to your aspirations. Keep
-              creating and watch your passion paint the path to your dreams.
+              A small business accountant can be a trusted advisor. To find the
+              right person for the job, it may be a good idea to have a series
+              of questions to narrow down the search. Although a good accountant
+              will know what questions to ask you to see if they can provide the
+              level of attention you need.
             </p>
             <div class="position-relative z-1 small-image">
               <img
@@ -245,13 +246,19 @@
         means an hour of billable time. If that's the case, run for the door.
       </p>
       <p class="blog-content">
-        Some tax preparers are seasonal. They are available only the first four months of the year, or their offices are close for a few months each year. If you expect year-round access, you need to make sure the tax professional is available.
+        Some tax preparers are seasonal. They are available only the first four
+        months of the year, or their offices are close for a few months each
+        year. If you expect year-round access, you need to make sure the tax
+        professional is available.
       </p>
       <p class="blog-content bold-font">
-        What can I do to help you with your work and keep your fees to a minimum?
+        What can I do to help you with your work and keep your fees to a
+        minimum?
       </p>
       <p class="blog-content">
-        A great deal of your accountant's time can be saved by preparing information beforehand. Find out if your CPA is willing to work with you to offload this work to your firm.
+        A great deal of your accountant's time can be saved by preparing
+        information beforehand. Find out if your CPA is willing to work with you
+        to offload this work to your firm.
       </p>
     </section>
     <footer class="footer bg-dark">
