update blog content

--- a/questions-to-ask-when-hiring-a-tax-accountant.html
+++ b/questions-to-ask-when-hiring-a-tax-accountant.html
@@ -14,12 +14,12 @@
       content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"
     />
     <title>
-      Questions to ask when Hiring a Tax Accountant in 2024 | Bermudez
+      15 Questions to ask when Hiring a Tax Accountant in 2024 | Bermudez
       Associates
     </title>
     <meta
       name="description"
-      content="Questions to ask when Hiring a Tax Accountant"
+      content="15 Questions to ask when Hiring a Tax Accountant"
     />
     <meta
       name="keywords"
@@ -33,11 +33,11 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:title"
-      content="Questions to ask when Hiring a Tax Accountant | Bermudez Associates"
+      content="15 Questions to ask when Hiring a Tax Accountant | Bermudez Associates"
     />
     <meta
       property="og:description"
-      content="Questions to ask when Hiring a Tax Accountant"
+      content="15 Questions to ask when Hiring a Tax Accountant"
     />
     <meta
       name="keywords"
@@ -58,7 +58,7 @@
         <div class="container-xl p-responsive-blog">
           <div class="gutter-spacious">
             <h1 class="blog-title">
-              Questions to ask when Hiring a Tax Accountant in 2024
+              15 Questions to ask when Hiring a Tax Accountant in 2024
             </h1>
             <p class="blog-summary">
               A small business accountant can be a trusted advisor. To find the
@@ -106,159 +106,161 @@
         What kind of credentials do you have?
       </p>
       <p class="blog-content">
-        Tax professionals are usually certified public accountants (CPAs),
-        enrolled agents (EAs) or unenrolled preparers.
+        Tax professionals are identified as either certified public accountants
+        (CPAs), enrolled agents (EAs) or unenrolled preparers (UPs). CPA is an
+        esteemed designation for accountants. The CPA path prepares accountants
+        for areas such as audit, tax planning, merger & acquisitions, and
+        forensics. An EA is a tax specialist and can represent you legal
+        matters. EAs are licensed by the IRS. A UP is one who prepares a return
+        but is not required to sign it as permitted by instructions to the
+        return or regulations.
+      </p>
+      <p class="blog-content bold-font">Who are your other clients?</p>
+      <p class="blog-content">
+        You want to know if the accountant understands the basics of your
+        business. You may need someone who is familiar with real estate, and
+        instead the accountant has only prepared tax returns for ecommerce
+        businesses. If you find out he has never had a client like you before,
+        you may still want to give the accountant a chance.
+      </p>
+      <p class="blog-content">
+        If they are businesses like yours, that is a good sign. In asking about
+        clients, you can ask about the work schedule and whether he has the
+        capacity and resources to support you adequately.
       </p>
       <p class="blog-content bold-font">
-        Who are your other clients? Do you perceive any conflicts of interest?
+        Do you perceive any conflicts of interest?
       </p>
       <p class="blog-content">
-        CPAs work for dozens of firms and scores and sometimes hundreds of
-        individuals. You should inquire if any of your direct competition is
-        represented by the firm. If so, inquire as to how this conflict is
-        handled.
-      </p>
-      <p class="blog-content">
-        Imagine this scenario: You hire an accountant based on the assumption he
-        understands the basics of your business. Then, you find out he's never
-        had a client like you before. Instead, he's only prepared tax forms for
-        wealthy individuals who don't own businesses.
-      </p>
-
-      <p class="blog-content">
-        Avoid this disaster by asking about the accountant's clients. If they
-        are businesses like yours, that's a good sign. In asking about clients,
-        you will also want to understand the CPA's work schedule and whether he
-        has the time and resources to support you adequately.
-      </p>
-      <p class="blog-content">
-        A proficient CPA makes it a habit to get back to clients as quickly as
-        possible. Phone messages should be replied to the day they are left – or
-        no later than the following day.
+        Tax professionals work with multiple firms and hundreds of individuals.
+        You may want to check if the firm represents any of your direct
+        competition. Inquire as to how conflict is managed.
       </p>
       <h2>Communication and Technology</h2>
-      <p class="blog-content bold-font">Is timely service delivered?</p>
+      <p class="blog-content bold-font">Is there a timely response?</p>
       <p class="blog-content">
-        Accounting information can get out of date quickly. Except for annual
-        information, most accounting information should be no more than 10-30
-        days old. You should be able to access your up-to-date information and
-        your CPA quickly and easily.
+        Accounting needs to be done consistently all year. Annual reporting is
+        done during the year, most accounting information should be less than 30
+        days old. You should have instant access to your information. talk to
+        your tax professional or a CPA firm, quickly and easily.
       </p>
       <p class="blog-content">
-        A proficient CPA makes it a habit to get back to clients as quickly as
-        possible. Phone messages should be replied to the day they are left – or
-        no later than the following day.
+        A proficient CPA firm makes it a habit to get back to clients as quickly
+        as possible. This can be a suitable time to ask about support and
+        “office hours.”
+      </p>
+      <p class="blog-content bold-font">
+        In this digital age, what is your policy on returning phone calls?
+      </p>
+      <p class="blog-content">
+        With client portals and text messaging notifications, it is reasonable
+        to ask how long you should expect to wait to have a call returned.
+        Asking also lets your CPA know you are interested in voice calls.
+      </p>
+      <p class="blog-content bold-font">
+        Who will I be interacting with and do the same people always service my
+        account?
+      </p>
+      <p class="blog-content">
+        Ideally, you want the same person to work with - not whoever is
+        available. You want to build a relationship and increase the rate of
+        success by partnering with your accountant to execute your long-term
+        vision.
+      </p>
+      <p class="blog-content">
+        Tax firms usually assign more than one person to a client. You might not
+        care how the “back room” operates, but you want to know if the person
+        interviewing is the one you are working with.
+      </p>
+      <p class="blog-content bold-font">
+        What services do you use to run your business?
+      </p>
+      <p class="blog-content">
+        Ask broad questions about business operations. How does the firm get and
+        service clients, the staff, and technology choice. If you have a
+        concern, address it by asking about computers, communications equipment,
+        or cyber security. Find out if they stay current by asking about their
+        research methods, record management and cyber threat response.
       </p>
       <p class="blog-content bold-font">Do you consider yourself tech-savvy?</p>
       <p class="blog-content">
-        Small business accounting software has made powerful accounting tools
-        available to everyone. But these accounting packages (most notably
-        QuickBooks) are only as useful as the person who installs and runs the
-        application. For this reason, a proficient CPA will help you install and
-        set up a set of books, while also requesting them for review.
-      </p>
-      <p class="blog-content bold-font">
-        Who will I be interacting with? What's your policy on returning phone
-        calls? Do the same people always service your account?
-      </p>
-      <p class="blog-content">
-        Ideally the same person should work with you — not whoever is available
-        at the time. That way a relationship can be built where the accountant
-        and you are comfortable with each other.
-      </p>
-      <p class="blog-content">
-        Many tax firms assign more than one person to a client's return. You
-        probably don't need to know how the “back room” operates, but you want
-        to know if the person you're interviewing is the one who will be able to
-        answer your questions about your return.
-      </p>
-      <p class="blog-content">
-        A common complaint often heard from consumers about their CPAs is about
-        long wait for returned phone calls. CPAs aren't famous for their
-        communication skills. It's not unreasonable to ask how long you should
-        expect to wait to have a call returned. Asking also lets your CPA know
-        you do want your calls returned promptly.
-      </p>
-      <p class="blog-content bold-font">
-        Do you conduct your own business and personal affairs in a reasonably
-        efficient and sensible way?
-      </p>
-      <p class="blog-content">
-        Ask questions about the CPA's approach to getting and serving clients,
-        the role of staff, the use of technology – including computers,
-        communications equipment, and the Internet — as well as ways of keeping
-        current, research methods, management of files and records, etc.
+        Just because the CPA offers software packages does not mean they know
+        how to use them. For this reason, a proficient CPA will help you install
+        and set up a set of books and guide you along the way. Ask if they offer
+        any kind of software or IT support.
       </p>
       <h2>Services and Support</h2>
       <p class="blog-content bold-font">
-        How can the accountant help you make more money? Do you believe I'm
-        paying too much, too little, or just the right amount of tax?
+        What kind of creative business advice will you offer?
       </p>
       <p class="blog-content">
-        Beyond simply preparing tax forms, an accountant should be involved in
-        business planning throughout the year. Typically, a quarterly review
-        should be scheduled to ensure books and records are in order. This also
-        allows the CPA time to advise clients about their businesses, so they
-        function with peak tax efficiency.
-      </p>
-      <p class="blog-content">
-        Because most business owners pay too much in taxes, a proficient CPA
-        will analyze the tax situation from the form of entity to all legal
-        means to plan and minimize all taxes paid.
-      </p>
-      <p class="blog-content">
-        It sounds like a wise-guy question, but the answer will help you find
-        out if candidates are interested in your business. Did they review the
-        financial information you provided prior to the interview? Did they make
-        sure you understood the accounting concepts, instead of tossing off a
-        bunch of jargon?
-      </p>
-      <p class="blog-content">
-        A proficient CPA's goal to save you more in taxes — it is also in his
-        best interest that you succeed.
+        Each industry will have its own strategies. A CPA should be able to
+        create a customized tax plan and use all available regulations to reduce
+        your current tax liability. Beyond preparing tax forms, quarterly
+        reviews should be scheduled to ensure books and records are in order.
       </p>
       <p class="blog-content bold-font">
-        What kind of creative business advice will you offer me?
+        Are you available outside of the tax season?
       </p>
       <p class="blog-content">
-        Advising clients on what they can do to grow and set goals, as well as
-        discussing issues, are all part of a proficient CPA's services.
-        Together, this allows you to discover what works for your business, so
-        funds are used wisely.
+        Tax preparers can be seasonal and available only the first four months
+        of the year. Some even close the office until the following “tax
+        season.” Make sure your tax professional is available year-round,
+        especially if you were looking for consistent tax planning.
+      </p>
+      <p class="blog-content bold-font">
+        Am I paying the right amount of taxes?
+      </p>
+      <p class="blog-content">
+        One of a tax professional's primary functions is to operate with peak
+        tax efficiency in mind.
+      </p>
+      <p class="blog-content">
+        Business owners paying too much in taxes is bad for all businesses, a
+        proficient CPA will analyze the tax situation. They will review all
+        aspects from business entity structure to all legal means to minimize
+        and defer tax payments.
+      </p>
+      <p class="blog-content bold-font">
+        Ask yourself: How can the accountant help me make more money?
+      </p>
+      <p class="blog-content">
+        Financial services are an investment, and the answer will help you find
+        out if candidates will treat your business like their own. Did they
+        prepare for the interview by reviewing financial information you
+        provided? Did they make sure you understood the accounting concepts?
+        Another return on the investment should be knowledge provided by the
+        accountant.
+      </p>
+      <p class="blog-content">
+        The goal of any tax professional is to save you time and money whether
+        you are tax planning for the following year or in an IRS audit.
       </p>
       <h2>Billing and Offer Structure</h2>
       <p class="blog-content bold-font">
-        Are you available outside of the tax season? How are your fees
-        calculated? Will you be charging me for every phone discussion?
+        Will you be charging me for every phone call?
       </p>
       <p class="blog-content">
-        To avoid friction later, it is essential to discuss the CPA's fee
-        structure. Tax professionals may bill by the hour, form, overall return,
-        or some combination. After reviewing your previous returns and
-        interviewing you, a tax professional should be able to give you a good
-        faith estimate of costs. If the CPA uses a time-based system, discuss
-        the hourly rate of the accountant and staff, overhead expense
-        reimbursement (what is the cost of a fax?) and whether certain time is
-        not billed.
+        What kind of offer do they have? How do they bill? Is it hourly pay as
+        you go, different rates based on staff member, or more like a
+        subscription or flat monthly charge? After reviewing past tax returns
+        and evaluating the attention you will need, a tax professional should
+        get you an accurate estimate.
       </p>
+      <p class="blog-content bold-font">What is included?</p>
       <p class="blog-content">
-        Find out now whether a simple two-minute phone call or a one-page fax
-        means an hour of billable time. If that's the case, run for the door.
-      </p>
-      <p class="blog-content">
-        Some tax preparers are seasonal. They are available only the first four
-        months of the year, or their offices are close for a few months each
-        year. If you expect year-round access, you need to make sure the tax
-        professional is available.
+        Make sure you know what is included and expectations up front. The tax
+        professional should be asking you questions to let you know what needs
+        to be included.
       </p>
       <p class="blog-content bold-font">
-        What can I do to help you with your work and keep your fees to a
-        minimum?
+        What can I do to help you with your work and keep the cost to a minimum?
       </p>
       <p class="blog-content">
-        A great deal of your accountant's time can be saved by preparing
-        information beforehand. Find out if your CPA is willing to work with you
-        to offload this work to your firm.
+        Effective communication will save much of the accountant's time by
+        preparing information beforehand. Your CPA should be willing to
+        collaborate with you to balance the workload to reach either a low cost
+        or more efficient workflow – you cannot always have both.
       </p>
     </section>
     <footer class="footer bg-dark">
