add escrow blog and update footer

--- a/questions-to-ask-when-hiring-a-tax-accountant.html
+++ b/questions-to-ask-when-hiring-a-tax-accountant.html
@@ -83,7 +83,11 @@
           <div class="authors-title">Authors</div>
           <div class="authors-section-flex">
             <div class="authors-flex">
-              <a href="https://github.com/horacio-a-bermudez" class="author">
+              <a
+                href="https://github.com/horacio-a-bermudez"
+                class="author"
+                target="_blank"
+              >
                 <img
                   src="https://avatars.githubusercontent.com/u/158126745?v=4"
                   class="author-image"
@@ -265,11 +269,11 @@
     </section>
     <footer class="footer bg-dark">
       <p class="pb-10">
-        &copy; 2022 Bermudez Associates. All Rights Reserved |
+        &copy; 2024 Bermudez Associates. All Rights Reserved |
         <a
           href="https://www.bermudezassociates.com/privacy.html"
           target="_blank"
-          style="text-decoration: underline"
+          class="text-links"
           >Privacy Policy</a
         >
       </p>
@@ -278,7 +282,7 @@
         <a
           href="https://www.darkoceantech.com"
           target="_blank"
-          style="text-decoration: underline"
+          class="text-links"
           >Dark Ocean Cloud</a
         >
       </p>
