mass update description and css utils

--- a/escrow-accounting-for-property-managers.html
+++ b/escrow-accounting-for-property-managers.html
@@ -16,7 +16,7 @@
     <title>Escrow Accounting for Property Managers | Bermudez Associates</title>
     <meta
       name="description"
-      content="Escrow Accounting for Property Managers"
+      content="Explore the essentials of escrow accounting for anyone managing investment properties. It is good practice for navigating escrow numbers and continuous compliance. Simplify the process to improve fund management and grow your real estate portfolio."
     />
     <meta
       name="keywords"
@@ -34,7 +34,7 @@
     />
     <meta
       property="og:description"
-      content="Escrow Accounting for Property Managers"
+      content="Explore the essentials of escrow accounting for anyone managing investment properties. It is good practice for navigating escrow numbers and continuous compliance. Simplify the process to improve fund management and grow your real estate portfolio."
     />
     <meta
       name="keywords"
@@ -46,7 +46,7 @@
     />
     <meta property="og:site_name" content="Bermudez Associates" />
 
-    <link rel="stylesheet" href="https://use.typekit.net/jil2tby.css" />
+    <link rel="stylesheet" href="https://use.typekit.net/jil2tby.css" />Explore the essentials of escrow accounting for anyone managing investment properties. It is good practice for navigating escrow numbers and continuous compliance. Simplify the process to improve fund management and grow your real estate portfolio.
     <link rel="stylesheet" href="css/blog.css" />
   </head>
   <body class="blog-body">
@@ -56,10 +56,10 @@
           <div class="gutter-spacious">
             <h1 class="blog-title">Escrow Accounting for Property Managers</h1>
             <p class="blog-summary">
-              Streamline A/R management for steady cash flow. It's a critical
-              process that requires accurate invoices, sales tax compliance,
-              timely collections, and current customer data. All of which
-              enhance your customer's experience.
+              Explore the essentials of escrow accounting for anyone managing
+              investment properties. It is good practice for navigating escrow
+              numbers and continuous compliance. Simplify the process to improve
+              fund management and grow your real estate portfolio.
             </p>
             <div class="position-relative z-1 small-image">
               <img
