--- a/manage-customer-invoices-and-collect-payments.html
+++ b/manage-customer-invoices-and-collect-payments.html
@@ -18,7 +18,10 @@
     </title>
     <meta
       name="description"
-      content="Manage Customer Invoices and Collect Payments"
+      content="Streamline A/R management for steady cash flow. It's a critical
+      process that requires accurate invoices, sales tax compliance,
+      timely collections, and current customer data. All of which
+      enhance your customer's experience."
     />
     <meta
       name="keywords"
@@ -36,7 +39,10 @@
     />
     <meta
       property="og:description"
-      content="Manage Customer Invoices and Collect Payments"
+      content="Streamline A/R management for steady cash flow. It's a critical
+      process that requires accurate invoices, sales tax compliance,
+      timely collections, and current customer data. All of which
+      enhance your customer's experience."
     />
     <meta
       name="keywords"
