--- a/questions-to-ask-when-hiring-a-tax-accountant.html
+++ b/questions-to-ask-when-hiring-a-tax-accountant.html
@@ -19,7 +19,11 @@
     </title>
     <meta
       name="description"
-      content="15 Questions to ask when Hiring a Tax Accountant"
+      content="A small business accountant can be a trusted advisor. To find the
+      right person for the job, it may be a good idea to have a series
+      of questions to narrow down the search. Although a good accountant
+      will know what questions to ask you to see if they can provide the
+      level of attention you need."
     />
     <meta
       name="keywords"
@@ -37,7 +41,11 @@
     />
     <meta
       property="og:description"
-      content="15 Questions to ask when Hiring a Tax Accountant"
+      content="A small business accountant can be a trusted advisor. To find the
+      right person for the job, it may be a good idea to have a series
+      of questions to narrow down the search. Although a good accountant
+      will know what questions to ask you to see if they can provide the
+      level of attention you need."
     />
     <meta
       name="keywords"
