quick fix commit - extra text removed

--- a/escrow-accounting-for-property-managers.html
+++ b/escrow-accounting-for-property-managers.html
@@ -46,7 +46,7 @@
     />
     <meta property="og:site_name" content="Bermudez Associates" />
 
-    <link rel="stylesheet" href="https://use.typekit.net/jil2tby.css" />Explore the essentials of escrow accounting for anyone managing investment properties. It is good practice for navigating escrow numbers and continuous compliance. Simplify the process to improve fund management and grow your real estate portfolio.
+    <link rel="stylesheet" href="https://use.typekit.net/jil2tby.css" />
     <link rel="stylesheet" href="css/blog.css" />
   </head>
   <body class="blog-body">
