add new images update css utils

--- a/escrow-accounting-for-property-managers.html
+++ b/escrow-accounting-for-property-managers.html
@@ -131,7 +131,7 @@
         <li>Business Activity while Managing Escrow</li>
       </ul>
       <!-- Next Section -->
-      <h2>Setup the Escrow Account in QuickBooks Online</h2>
+      <h2>Setup the Escrow Account in QBO</h2>
       <p class="blog-content bold-font">
         Is the escrow account an
         <a
@@ -167,7 +167,7 @@
       </p>
       <img
         src="images/s1-go-to-coa.png"
-        class="blog-container"
+        class="blog-image image-w100"
         alt="Horacio Bermudez"
       />
       <p class="blog-content">
@@ -176,7 +176,7 @@
       </p>
       <img
         src="images/s1-coa-new-account.png"
-        class="blog-container"
+        class="blog-image image-w100"
         alt="Horacio Bermudez"
       />
       <p class="blog-content">
@@ -195,18 +195,22 @@
           class="text-links"
           >Schedule C tax form when set up as a sole proprietor in QBO</a
         >. It does not change anything else other than tax account mapping.
-        Select the best description for your escrow account. Investment -
-        Mortgage/Real Estate Loans and Prepaid Expenses both are suitable
-        options.
-      </p>
-      <p class="blog-content">
-        I am not sure of the detail type, so I will just choose Investment -
-        Mortgage/Real Estate Loans for now. The escrow is a current asset so I
-        will name the account Current Escrow.
       </p>
       <img
-        src="images/s1-coa-create-account.png"
-        class="blog-container"
+        src="images/escrow-series/coa-add-new-account.jpg"
+        class="blog-image image-w100"
+        alt="Horacio Bermudez"
+      />
+      <p class="blog-content">
+        Select the best description for your escrow account. Investment -
+        Mortgage/Real Estate Loans and Prepaid Expenses both are suitable
+        options. I am not sure of the detail type, so I will just choose
+        Investment - Mortgage/Real Estate Loans for now. The escrow is a current
+        asset so I will name the account Current Escrow.
+      </p>
+      <img
+        src="images/escrow-series/coa-add-escrow-account.jpg"
+        class="blog-image image-w70"
         alt="Horacio Bermudez"
       />
       <!-- Next Section -->
@@ -216,15 +220,15 @@
       </p>
       <img
         src="images/s1-coa-add-je.png"
-        class="blog-container"
+        class="blog-image image-w100"
         alt="Horacio Bermudez"
       />
       <p class="blog-content">
         Create a new journal entry and add your new asset to QBO.
       </p>
       <img
-        src="images/s1-add-new-asset.png"
-        class="blog-container"
+        src="images/escrow-series/coa-add-asset-je.jpg"
+        class="blog-image image-w100"
         alt="Horacio Bermudez"
       />
       <p class="blog-content">
@@ -232,8 +236,8 @@
         a $3,500 balance mathcing Journal Entry #1.
       </p>
       <img
-        src="images/s1-new-escrow-balance.png"
-        class="blog-container"
+        src="images/escrow-series/coa-review-escrow-1.jpg"
+        class="blog-image image-w100"
         alt="Horacio Bermudez"
       />
       <!-- Next Section -->
@@ -243,8 +247,8 @@
         expense asset is now an actual expense reducing your tax liability.
       </p>
       <img
-        src="images/s1-escrow-expense-1.png"
-        class="blog-container"
+        src="images/escrow-series/coa-pay-insur-tax.jpg"
+        class="blog-image image-w100"
         alt="Horacio Bermudez"
       />
       <p class="blog-content">
@@ -253,8 +257,8 @@
         expense. The escrow balance is now $3,208.34.
       </p>
       <img
-        src="images/s1-reduced-escrow.png"
-        class="blog-container"
+        src="images/escrow-series/coa-review-escrow-2.jpg"
+        class="blog-image image-w100"
         alt="Horacio Bermudez"
       />
       <p class="blog-content">
@@ -263,8 +267,29 @@
         the escrow payment.
       </p>
       <img
-        src="images/s1-escrow-register-1.png"
-        class="blog-container"
+        src="images/escrow-series/coa-review-register-1.jpg"
+        class="blog-image image-w100"
+        alt="Horacio Bermudez"
+      />
+      <p class="blog-content">
+        As you add more assets to your books, you may need to update the escrow
+        account information. Create a system for adding and updating accounts,
+        including naming conventions and tax treatment.
+      </p>
+      <img
+        src="images/escrow-series/coa-edit-button-escrow-account.jpg"
+        class="blog-image image-w100"
+        alt="Horacio Bermudez"
+      />
+      <p class="blog-content">
+        In this case, I thought it would be better to change the Account name to
+        something more descriptive by replacing Current with Insurance & Tax. I
+        also decided to select Prepaid Expense as the detail type since it is
+        more accurate.
+      </p>
+      <img
+        src="images/escrow-series/coa-update-escrow-account.jpg"
+        class="blog-image image-w70"
         alt="Horacio Bermudez"
       />
       <p class="blog-content">
@@ -272,29 +297,17 @@
         numbering consistent. It makes asset reporting easier.
       </p>
       <img
-        src="images/s1-escrow-register-2.png"
-        class="blog-container"
+        src="images/escrow-series/coa-review-register-2.jpg"
+        class="blog-image image-w100"
         alt="Horacio Bermudez"
       />
-      <p class="blog-content">
-        As you add more assets to your books, you may need to update the escrow
-        account information. Create a system for adding and updating accounts,
-        including naming conventions and tax treatment. In this case, I thought
-        it would be better to change the Account name to something more
-        descriptive by replacing Current with Insurance & Tax. I also decided to
-        select Prepaid Expense as the detail type since it is more accurate.
-        <img
-          src="images/s1-coa-update-account.png"
-          class="blog-container"
-          alt="Horacio Bermudez"
-        />
-      </p>
       <!-- Next Section -->
       <h2>Business Activity while Managing Escrow</h2>
       <p class="blog-content">
         Bookkeeping is all about mapping your physical business activity to the
-        digital world. The transaction is happening with the lender and the
-        escrow account maps the transactions with your lender.
+        digital world. The transaction is happening between the lender, lessee,
+        and leaser. The escrow and the other related accounts map the physical
+        activity to QBO.
       </p>
       <p class="blog-content bold-font">Escrow is restricted cash</p>
       <p class="blog-content">
